--- a/main.css
+++ b/main.css
@@ -20,6 +20,13 @@ body {
 }
 
 .pokemon-card > img {
- height: 300px;
- width: 300px; 
+ height: 420px;
+ width: 42Opx; 
+}
+
+#container {
+ display: flex;
+ justify-content: center;
+ gap: 1%;
+ cursor: pointer;
 }
